--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,31 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Details</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+        .contact-details {
+            max-width: 400px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        .instagram-link {
+            color: #e4405f;
+        }
+    </style>
+</head>
+<body>
+    <div class="contact-details">
+        <h2>Contact Details</h2>
+        <p>Email: <a href="mailto:kunnathalfasmuhammed@gmail.com">kunnathalfasmuhammed@gmail.com</a></p>
+        <p>Phone: <a href="tel:9544562717">954-456-2717</a></p>
+        <p>Instagram: <a class="instagram-link" href="https://instagram.com/al._f4z_">@al._f4z_</a></p>
+    </div>
+</body>
+</html>
